--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1307,7 +1307,6 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "rDJZEIDGQxvH",
         "outputId": "da9cfa45-1ec9-47b3-9ce2-6c490b6d2197"
       },
@@ -1344,7 +1343,7 @@
         },
         "outputId": "8130ceab-c6fe-4e7a-9ab6-fb1bb9dbebfb"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1355,12 +1354,90 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "r = [1,2,3]\n",
+        "n = len(r)\n",
+        "r[n-1]=r[n-1]+1\n",
+        "print(r)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mwyKpGOdBto9",
+        "outputId": "eeb4ca61-cf04-4df1-85f1-1768b245e51b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List, Optional\n",
+        "\n",
+        "class TreeNode:\n",
+        "    def __init__(self, val: int):\n",
+        "        self.val = val\n",
+        "        self.left: Optional[TreeNode] = None\n",
+        "        self.right: Optional[TreeNode] = None\n",
+        "\n",
+        "class Solution:\n",
+        "    def sortedArray(self, nums: List[int]) -> Optional[TreeNode]:\n",
+        "        if not nums:\n",
+        "            return None\n",
+        "        mid = len(nums) // 2\n",
+        "        root = TreeNode(nums[mid])\n",
+        "        root.left = self.sortedArray(nums[:mid])\n",
+        "        root.right = self.sortedArray(nums[mid+1:])\n",
+        "        return root\n",
+        "def inorder(root: Optional[TreeNode]):\n",
+        "    if root:\n",
+        "        inorder(root.left)\n",
+        "        print(root.val, end=' ')\n",
+        "        inorder(root.right)\n",
+        "\n",
+        "# Example usage\n",
+        "nums = [-10, -3, 0, 5, 9]\n",
+        "sol = Solution()\n",
+        "tree = sol.sortedArray(nums)\n",
+        "print(\"Inorder traversal of BST:\")\n",
+        "inorder(tree)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lmAzqT2tT9jk",
+        "outputId": "c60e6b0e-4604-4db4-cd8a-483809238d11"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Inorder traversal of BST:\n",
+            "-10 -3 0 5 9 "
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrz/75CaIM2AauXkqkbLZ5",
+      "authorship_tag": "ABX9TyPTeusyNpLKHI/cXoLKqWeY",
       "include_colab_link": true
     },
     "kernelspec": {
