--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1421,7 +1421,7 @@
         "id": "lmAzqT2tT9jk",
         "outputId": "c60e6b0e-4604-4db4-cd8a-483809238d11"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1432,12 +1432,40 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = list(map(int, input().split()))\n",
+        "nums.sort()\n",
+        "result = max(nums[-1] * nums[-2] * nums[-3], nums[0] * nums[1] * nums[-1])\n",
+        "\n",
+        "print(result)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d45Q7sSa0TPy",
+        "outputId": "508db618-6c46-44b4-e430-0a178a34c2d8"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123\n",
+            "6\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTeusyNpLKHI/cXoLKqWeY",
+      "authorship_tag": "ABX9TyOrCVN8us9ZKfI3r0EzCxzg",
       "include_colab_link": true
     },
     "kernelspec": {
