--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1449,7 +1449,7 @@
         "id": "d45Q7sSa0TPy",
         "outputId": "508db618-6c46-44b4-e430-0a178a34c2d8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1460,12 +1460,47 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def generate(numrows):\n",
+        "  t = []\n",
+        "  for i in range(numrows):\n",
+        "    r = [1] * (i+1)\n",
+        "    for j in range(1,i):\n",
+        "      r[j] = t[i-1][j-1]+t[i-1][j]\n",
+        "    t.append(r)\n",
+        "  return t\n",
+        "\n",
+        "n = int(input(\"Enter number of rows: \"))\n",
+        "result = generate(n)\n",
+        "print(result)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eKG52sh5yi9Q",
+        "outputId": "2a2a162d-fe69-4331-dfd0-ba28800db8e3"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number of rows: 5\n",
+            "[[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1]]\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrCVN8us9ZKfI3r0EzCxzg",
+      "authorship_tag": "ABX9TyNakgLM3HgF1Xmc+RRnGmmQ",
       "include_colab_link": true
     },
     "kernelspec": {
