--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1484,7 +1484,7 @@
         "id": "eKG52sh5yi9Q",
         "outputId": "2a2a162d-fe69-4331-dfd0-ba28800db8e3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1495,12 +1495,47 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def majorityElements(nums):\n",
+        "  count = 0\n",
+        "  c = None\n",
+        "  for num in nums:\n",
+        "    if count == 0:\n",
+        "      c = num\n",
+        "    count += 1 if num == c else -1\n",
+        "  if nums.count(c) > len(nums)//2:\n",
+        "     return c\n",
+        "  else:\n",
+        "    return -1\n",
+        "nums = [6, 5, 5]\n",
+        "print(majorityElements(nums))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7UKpLNfI-ggK",
+        "outputId": "f7b00b2a-1b34-4a63-f8a0-502e703a657f"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNakgLM3HgF1Xmc+RRnGmmQ",
+      "authorship_tag": "ABX9TyOLeAA33ySunw2jsQHp5Uez",
       "include_colab_link": true
     },
     "kernelspec": {
