--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1520,7 +1520,7 @@
         "id": "7UKpLNfI-ggK",
         "outputId": "f7b00b2a-1b34-4a63-f8a0-502e703a657f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1530,12 +1530,46 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rowIndex = int(input(\"Enter row index: \"))\n",
+        "\n",
+        "row = [1]\n",
+        "for i in range(1, rowIndex + 1):\n",
+        "    new_row = [1]\n",
+        "    for j in range(1, len(row)):\n",
+        "        new_row.append(row[j - 1] + row[j])\n",
+        "    new_row.append(1)\n",
+        "    row = new_row\n",
+        "\n",
+        "print(\"Pascal's Triangle Row:\", row)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m483cjtJ-w9W",
+        "outputId": "026d58a9-3482-4079-b887-890a7a948293"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter row index: 3\n",
+            "Pascal's Triangle Row: [1, 3, 3, 1]\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLeAA33ySunw2jsQHp5Uez",
+      "authorship_tag": "ABX9TyMZbLSypYMNJgqAALu+fdRk",
       "include_colab_link": true
     },
     "kernelspec": {
