--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1553,7 +1553,7 @@
         "id": "m483cjtJ-w9W",
         "outputId": "026d58a9-3482-4079-b887-890a7a948293"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1564,12 +1564,47 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def max_prices(prices):\n",
+        "  min_price = float('inf')\n",
+        "  max_profit = 0\n",
+        "  for price in prices:\n",
+        "    if price < min_price:\n",
+        "      min_price = price\n",
+        "    else:\n",
+        "      profit = price-min_price\n",
+        "      if profit > max_profit:\n",
+        "        max_profit = profit\n",
+        "  return max_profit\n",
+        "prices = [7,1,5,3,6,4]\n",
+        "print(max_prices(prices))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g49bid9x15JT",
+        "outputId": "23306718-1ce2-4156-e1a8-ba108f0433ae"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZbLSypYMNJgqAALu+fdRk",
+      "authorship_tag": "ABX9TyOSU17l+0mg6XPAVunNWcgP",
       "include_colab_link": true
     },
     "kernelspec": {
