--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1589,7 +1589,7 @@
         "id": "g49bid9x15JT",
         "outputId": "23306718-1ce2-4156-e1a8-ba108f0433ae"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1599,12 +1599,37 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = list(map(int, input().split()))\n",
+        "print(len(nums) != len(set(nums)))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oQt9tWBI_EmG",
+        "outputId": "a2da662d-71ba-4ff6-ac48-361afa0420bd"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 2 3 4 \n",
+            "True\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSU17l+0mg6XPAVunNWcgP",
+      "authorship_tag": "ABX9TyPQqT0SyKMMuzkx3cwExZkk",
       "include_colab_link": true
     },
     "kernelspec": {
