--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1607,13 +1607,13 @@
         "print(len(nums) != len(set(nums)))\n"
       ],
       "metadata": {
+        "id": "oQt9tWBI_EmG",
+        "outputId": "a2da662d-71ba-4ff6-ac48-361afa0420bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "oQt9tWBI_EmG",
-        "outputId": "a2da662d-71ba-4ff6-ac48-361afa0420bd"
+        }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1624,12 +1624,39 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = [1,2,3,4,5,5]\n",
+        "r = 0\n",
+        "for num in nums:\n",
+        "  r^=num\n",
+        "print(r)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j9nQbag0fWZf",
+        "outputId": "86d144a0-168c-4b30-f70a-3d4e470b0ec9"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQqT0SyKMMuzkx3cwExZkk",
+      "authorship_tag": "ABX9TyMd+M7jYlCiue3RtxNJ7BlH",
       "include_colab_link": true
     },
     "kernelspec": {
