--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1641,7 +1641,7 @@
         "id": "j9nQbag0fWZf",
         "outputId": "86d144a0-168c-4b30-f70a-3d4e470b0ec9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1651,12 +1651,42 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def contains_nearby_duplicate(nums, k):\n",
+        "    seen = {}\n",
+        "    for i, num in enumerate(nums):\n",
+        "        if num in seen and i - seen[num] <= k:\n",
+        "            return True\n",
+        "        seen[num] = i\n",
+        "    return False\n",
+        "print(contains_nearby_duplicate([1, 2, 3, 1], 3))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8h5XLlJKrvt5",
+        "outputId": "65e07b71-3c85-4590-dfb4-d3f75fb39ed9"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMd+M7jYlCiue3RtxNJ7BlH",
+      "authorship_tag": "ABX9TyOofDdJkCmlCHBg/ttkdXvF",
       "include_colab_link": true
     },
     "kernelspec": {
