--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1665,13 +1665,13 @@
         "print(contains_nearby_duplicate([1, 2, 3, 1], 3))"
       ],
       "metadata": {
+        "id": "8h5XLlJKrvt5",
+        "outputId": "65e07b71-3c85-4590-dfb4-d3f75fb39ed9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "8h5XLlJKrvt5",
-        "outputId": "65e07b71-3c85-4590-dfb4-d3f75fb39ed9"
+        }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1681,12 +1681,42 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = [3, 0, 1]\n",
+        "\n",
+        "n = len(nums)\n",
+        "expected_sum = n * (n + 1) // 2\n",
+        "actual_sum = sum(nums)\n",
+        "missing = expected_sum - actual_sum\n",
+        "\n",
+        "print(missing)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cWM1Fy0VRQar",
+        "outputId": "fe338d2b-c575-45fe-e4a4-64c7f2060ec2"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOofDdJkCmlCHBg/ttkdXvF",
+      "authorship_tag": "ABX9TyMuu4Qm/ubY2qmnTotqxlI3",
       "include_colab_link": true
     },
     "kernelspec": {
