--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1701,7 +1701,7 @@
         "id": "cWM1Fy0VRQar",
         "outputId": "fe338d2b-c575-45fe-e4a4-64c7f2060ec2"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1711,12 +1711,46 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nums = [0,1,2,4,5,7]\n",
+        "res = []\n",
+        "i = 0\n",
+        "while i < len(nums):\n",
+        "  start = nums[i]\n",
+        "  while i + 1 < len(nums) and nums[i + 1] == nums[i] + 1:\n",
+        "    i += 1\n",
+        "  end = nums[i]\n",
+        "  res.append(f\"{start}->{end}\" if start  != end else str(start))\n",
+        "  i += 1\n",
+        "print(res)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nN06WfPNp6EY",
+        "outputId": "4d49703c-198b-4f51-a230-f5285dec7b94"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['0->2', '4->5', '7']\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMuu4Qm/ubY2qmnTotqxlI3",
+      "authorship_tag": "ABX9TyNJZ+Lfn31WCqwWTO1nw+js",
       "include_colab_link": true
     },
     "kernelspec": {
