--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1735,7 +1735,7 @@
         "id": "nN06WfPNp6EY",
         "outputId": "4d49703c-198b-4f51-a230-f5285dec7b94"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1745,12 +1745,43 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def maximummedium(nums):\n",
+        "  nums.sort()\n",
+        "  n = len(nums)\n",
+        "  res = 0\n",
+        "  for i in range(n//3, n, 2):\n",
+        "    res += nums[i]\n",
+        "  return res\n",
+        "nums = [1,2,3,1,2,4]\n",
+        "print(maximummedium(nums))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xWvZrCDNr16J",
+        "outputId": "1efae89c-bd50-46a9-93d0-8ba5fd5276b1"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJZ+Lfn31WCqwWTO1nw+js",
+      "authorship_tag": "ABX9TyNrnEOmOkyYDA9RQDLkKIQP",
       "include_colab_link": true
     },
     "kernelspec": {
