--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1766,7 +1766,7 @@
         "id": "xWvZrCDNr16J",
         "outputId": "1efae89c-bd50-46a9-93d0-8ba5fd5276b1"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1776,12 +1776,39 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def ispalindrome(x):\n",
+        "    s = str(x)\n",
+        "    return s == s[::-1]\n",
+        "x = \"madam\"\n",
+        "print(ispalindrome(x))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AYas1D94sCHJ",
+        "outputId": "8c83fdf3-5c09-4368-b0b4-5ccf6a478618"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrnEOmOkyYDA9RQDLkKIQP",
+      "authorship_tag": "ABX9TyOe2zoX6Pyn20DPImL+YLu1",
       "include_colab_link": true
     },
     "kernelspec": {
