--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1793,7 +1793,7 @@
         "id": "AYas1D94sCHJ",
         "outputId": "8c83fdf3-5c09-4368-b0b4-5ccf6a478618"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1803,12 +1803,38 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"1010\"\n",
+        "b = \"1011\"\n",
+        "s = bin(int(a, 2) + int(b, 2))[2:]\n",
+        "print(s)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zpIc990xvrlJ",
+        "outputId": "fa397d6d-28d2-405e-a7a7-195e219e5717"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10101\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOe2zoX6Pyn20DPImL+YLu1",
+      "authorship_tag": "ABX9TyOcu3dtd9PPXC2yZqRH7oXN",
       "include_colab_link": true
     },
     "kernelspec": {
