--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1819,7 +1819,7 @@
         "id": "zpIc990xvrlJ",
         "outputId": "fa397d6d-28d2-405e-a7a7-195e219e5717"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1829,12 +1829,49 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def product_except_self(nums):\n",
+        "  n = len(nums)\n",
+        "  o = [1] * n\n",
+        "  prefix = 1\n",
+        "  for i in range(n):\n",
+        "    o[i] *= prefix\n",
+        "    prefix *= nums[i]\n",
+        "  suffix = 1\n",
+        "  for i in range(n-1,-1,-1):\n",
+        "    o[i] *= suffix\n",
+        "    suffix *= nums[i]\n",
+        "  return o\n",
+        "print(product_except_self([1, 2, 3, 4]))\n",
+        "print(product_except_self([-1, 1, 0, -3, 3]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lRf6ZCkqloxn",
+        "outputId": "a815d0e1-b6e0-4112-ccc3-ea5a81eefd8f"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[24, 12, 8, 6]\n",
+            "[0, 0, 9, 0, 0]\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcu3dtd9PPXC2yZqRH7oXN",
+      "authorship_tag": "ABX9TyPkXTD8oqoIxpVaoYsMoK6t",
       "include_colab_link": true
     },
     "kernelspec": {
