--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1866,12 +1866,52 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pickle import FROZENSET\n",
+        "import math\n",
+        "def get_permutation(n,k):\n",
+        "  numbers = list(map(str, range(1, n+1)))\n",
+        "  k -= 1\n",
+        "  result = ''\n",
+        "  for i in range(n,0,-1):\n",
+        "    fact = math.factorial(i-1)\n",
+        "    index = k // fact\n",
+        "    result += numbers.pop(index)\n",
+        "    k %= fact\n",
+        "  return result\n",
+        "print(get_permutation(3, 3))\n",
+        "print(get_permutation(4, 9))\n",
+        "print(get_permutation(3, 1))\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hK1h1iVy17V1",
+        "outputId": "ec0ab2b7-8e52-482e-b285-46034906c469"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "213\n",
+            "2314\n",
+            "123\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkXTD8oqoIxpVaoYsMoK6t",
+      "authorship_tag": "ABX9TyPfc48nSmJ56kcvPUGJGKc3",
       "include_colab_link": true
     },
     "kernelspec": {
