--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1855,7 +1855,7 @@
         "id": "lRf6ZCkqloxn",
         "outputId": "a815d0e1-b6e0-4112-ccc3-ea5a81eefd8f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1894,7 +1894,7 @@
         "id": "hK1h1iVy17V1",
         "outputId": "ec0ab2b7-8e52-482e-b285-46034906c469"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1906,12 +1906,68 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Solution:\n",
+        "    def romanToInt(self, s: str) -> int:\n",
+        "        \"\"\"\n",
+        "        Convert a Roman numeral to an integer.\n",
+        "        Assumes s is a valid Roman numeral in uppercase.\n",
+        "        \"\"\"\n",
+        "        vals = {\n",
+        "            \"I\": 1,\n",
+        "            \"V\": 5,\n",
+        "            \"X\": 10,\n",
+        "            \"L\": 50,\n",
+        "            \"C\": 100,\n",
+        "            \"D\": 500,\n",
+        "            \"M\": 1000,\n",
+        "        }\n",
+        "        total = 0\n",
+        "        n = len(s)\n",
+        "        for i in range(n):\n",
+        "            curr = vals[s[i]]\n",
+        "            # if next symbol exists and is larger, subtract current\n",
+        "            if i + 1 < n and vals[s[i + 1]] > curr:\n",
+        "                total -= curr\n",
+        "            else:\n",
+        "                total += curr\n",
+        "        return total\n",
+        "\n",
+        "\n",
+        "# Example usage / tests\n",
+        "if __name__ == \"__main__\":\n",
+        "    sol = Solution()\n",
+        "    test_cases = {\n",
+        "        \"III\": 3,\n",
+        "        \"LVIII\": 58,\n",
+        "        \"MCMXCIV\": 1994,\n",
+        "        \"IV\": 4,\n",
+        "        \"IX\": 9,\n",
+        "        \"XL\": 40,\n",
+        "        \"XC\": 90,\n",
+        "        \"CD\": 400,\n",
+        "        \"CM\": 900,\n",
+        "    }\n",
+        "    for roman, expected in test_cases.items():\n",
+        "        result = sol.romanToInt(roman)\n",
+        "        print(f\"{roman} -> {result} (expected {expected})\")\n",
+        "        assert result == expected\n",
+        "    print(\"All tests passed.\")\n"
+      ],
+      "metadata": {
+        "id": "O5IETtGEjPQJ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfc48nSmJ56kcvPUGJGKc3",
+      "authorship_tag": "ABX9TyMcoNNWPcYxgXyehcC57mJV",
       "include_colab_link": true
     },
     "kernelspec": {
