--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1910,64 +1910,44 @@
     {
       "cell_type": "code",
       "source": [
-        "class Solution:\n",
-        "    def romanToInt(self, s: str) -> int:\n",
-        "        \"\"\"\n",
-        "        Convert a Roman numeral to an integer.\n",
-        "        Assumes s is a valid Roman numeral in uppercase.\n",
-        "        \"\"\"\n",
-        "        vals = {\n",
-        "            \"I\": 1,\n",
-        "            \"V\": 5,\n",
-        "            \"X\": 10,\n",
-        "            \"L\": 50,\n",
-        "            \"C\": 100,\n",
-        "            \"D\": 500,\n",
-        "            \"M\": 1000,\n",
-        "        }\n",
-        "        total = 0\n",
-        "        n = len(s)\n",
-        "        for i in range(n):\n",
-        "            curr = vals[s[i]]\n",
-        "            # if next symbol exists and is larger, subtract current\n",
-        "            if i + 1 < n and vals[s[i + 1]] > curr:\n",
-        "                total -= curr\n",
-        "            else:\n",
-        "                total += curr\n",
-        "        return total\n",
+        "def reverse(x: int) -> int:\n",
+        "    sign = -1 if x < 0 else 1\n",
+        "    x = abs(x)\n",
+        "    rev = 0\n",
+        "    INT_MAX = 2**31 - 1\n",
         "\n",
+        "    while x:\n",
+        "        rev = rev * 10 + x % 10\n",
+        "        x //= 10\n",
+        "        if rev > INT_MAX:  # overflow\n",
+        "            return 0\n",
+        "    return sign * rev if -2**31 <= sign * rev <= INT_MAX else 0\n",
         "\n",
-        "# Example usage / tests\n",
-        "if __name__ == \"__main__\":\n",
-        "    sol = Solution()\n",
-        "    test_cases = {\n",
-        "        \"III\": 3,\n",
-        "        \"LVIII\": 58,\n",
-        "        \"MCMXCIV\": 1994,\n",
-        "        \"IV\": 4,\n",
-        "        \"IX\": 9,\n",
-        "        \"XL\": 40,\n",
-        "        \"XC\": 90,\n",
-        "        \"CD\": 400,\n",
-        "        \"CM\": 900,\n",
-        "    }\n",
-        "    for roman, expected in test_cases.items():\n",
-        "        result = sol.romanToInt(roman)\n",
-        "        print(f\"{roman} -> {result} (expected {expected})\")\n",
-        "        assert result == expected\n",
-        "    print(\"All tests passed.\")\n"
+        "print(reverse(123))   # 321\n"
       ],
       "metadata": {
-        "id": "O5IETtGEjPQJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UQr12maRXN6_",
+        "outputId": "8ecb89e8-776b-4d42-b428-db7c5479b4a8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "321\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcoNNWPcYxgXyehcC57mJV",
+      "authorship_tag": "ABX9TyPex62cSE9IIdvLlU5H+hDL",
       "include_colab_link": true
     },
     "kernelspec": {
