--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1932,7 +1932,7 @@
         "id": "UQr12maRXN6_",
         "outputId": "8ecb89e8-776b-4d42-b428-db7c5479b4a8"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1942,12 +1942,46 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def convertToTitle(columnNumber: int) -> str:\n",
+        "    result = \"\"\n",
+        "    while columnNumber > 0:\n",
+        "        columnNumber -= 1\n",
+        "        result = chr(columnNumber % 26 + ord('A')) + result\n",
+        "        columnNumber //= 26\n",
+        "    return result\n",
+        "print(convertToTitle(1))\n",
+        "print(convertToTitle(28))\n",
+        "print(convertToTitle(701))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2PXL9KlyDDgR",
+        "outputId": "95e522ed-d851-479c-dc95-a5be2b965b1c"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A\n",
+            "AB\n",
+            "ZY\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPex62cSE9IIdvLlU5H+hDL",
+      "authorship_tag": "ABX9TyPfzKpgUZ49Zu40kB/I1c3X",
       "include_colab_link": true
     },
     "kernelspec": {
