--- a/python_codes.ipynb
+++ b/python_codes.ipynb
@@ -1958,11 +1958,33 @@
         "print(convertToTitle(701))\n"
       ],
       "metadata": {
+        "id": "2PXL9KlyDDgR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List\n",
+        "\n",
+        "nums = [-2, 0, 3, -5, 2, -1]\n",
+        "prefix_sum = [0]\n",
+        "for num in nums:\n",
+        "    prefix_sum.append(prefix_sum[-1] + num)\n",
+        "def sumRange(left: int, right: int) -> int:\n",
+        "    return prefix_sum[right + 1] - prefix_sum[left]\n",
+        "\n",
+        "print(sumRange(0, 2))\n",
+        "print(sumRange(2, 5))\n",
+        "print(sumRange(0, 5))\n"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2PXL9KlyDDgR",
-        "outputId": "95e522ed-d851-479c-dc95-a5be2b965b1c"
+        "id": "uHpyhCUDkgDB",
+        "outputId": "8fe07e0a-1ae3-4313-e3d1-b10bbcaef2e1"
       },
       "execution_count": 1,
       "outputs": [
@@ -1970,9 +1992,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A\n",
-            "AB\n",
-            "ZY\n"
+            "1\n",
+            "-1\n",
+            "-3\n"
           ]
         }
       ]
@@ -1981,7 +2003,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfzKpgUZ49Zu40kB/I1c3X",
+      "authorship_tag": "ABX9TyPBOgNHLq/RKdsJWbTx9gWR",
       "include_colab_link": true
     },
     "kernelspec": {
